=======
CHANGES
=======

------
0.4.0
------

Can now display and add multiindexes
Added function evaluation tool
Grouped plots now work

------
0.3.1
------

Fixed relative imports

------
0.3.0
------

Added ability to create sub/child table
Merge and concat with sub tables
Removed row/col buttons from toolbar to prevent clutter
Added filtering using string queries; pandas query()
Rendering and handling of empty tables
Can now hide plot viewer in dataexplore app

------
0.2.0
------

Added dataframe index display in row header
Ability to reset index
Added hexbin plot
Added iris.data for tests
Fixes for subplots layout
Improved histogram plots
Aggregate, pivot tools added
freeze script for windows binary

------
0.0.1
------

Ported old tkintertable code to Python3
Removed old extraneous TableModel code
Added PlotFrame class
Re-did table viewer application
No longer using Pmw widgets